<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">群发助手</string>
    <string name="send_sms">群发短信</string>
    <string name="send_email">群发邮件</string>
    <string name="bt_send_sms">确认群发短信</string>
    <string name="bt_send_email">确认群发邮件</string>
    <string name="choose_none">点击右上角按钮添加收件人</string>
    <string name="hint_sms_content">请输入发送内容,根据运营商限制,含中文字符超出70字分开发送;全英文字符,超出160字分开发送&#8230;</string>
    <string name="none">(0)</string>
    <string name="smscontentnone">(0字)</string>
    <string name="shoujianren">收件人</string>
    <string name="zhengwen">正文</string>
    <string name="has_attatchment">(附件已添加)</string>
    <string name="email_subject">主题</string>
    <string name="bt_confirm_add">添加联系人</string>
    <string name="select_contacts">选择联系人</string>
    <string name="select_attach">选择附件</string>
    <string name="action_settings">Settings</string>
    <string name="push_again_exit">再按一次返回键退出</string>

</resources>